--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Git</title>  
 </head>
 <body>
-    
+    <h1>Hello</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, dolorem!</p>
 </body>
 </html>
